# simple-xiaozhi

./: README.md  pyproject.toml
src/simple_xiaozhi/: application.py
src/simple_xiaozhi/audio_codecs/: aec_processor.py  audio_codec.py  music_decoder.py  tts_cache.py
src/simple_xiaozhi/audio_processing/: wake_word_detect.py
src/simple_xiaozhi/commands/: app.py
src/simple_xiaozhi/constants/: constants.py
src/simple_xiaozhi/core/: ota.py  system_initializer.py
src/simple_xiaozhi/iot/: thing_manager.py
src/simple_xiaozhi/iot/things/: lamp.py
src/simple_xiaozhi/mcp/: mcp_server.py
src/simple_xiaozhi/mcp/tools/bazi/: manager.py  marriage_tools.py  tools.py
src/simple_xiaozhi/mcp/tools/calendar/: database.py  manager.py  reminder_service.py  tools.py
src/simple_xiaozhi/mcp/tools/camera/: __init__.py  base_camera.py  camera.py  normal_camera.py  vl_camera.py
src/simple_xiaozhi/mcp/tools/music/: manager.py  music_player.py
src/simple_xiaozhi/mcp/tools/screenshot/: __init__.py  screenshot_camera.py
src/simple_xiaozhi/mcp/tools/system/: tools.py  (+1 more)
src/simple_xiaozhi/plugins/: audio.py  calendar.py  iot.py  manager.py  mcp.py  shortcuts.py  ui.py  wake_word.py
src/simple_xiaozhi/protocols/: mqtt_protocol.py  protocol.py  websocket_protocol.py
src/simple_xiaozhi/simple_client/: __init__.py  app.py  application.py  audio.py  config.py  ws_client.py
src/simple_xiaozhi/utils/: audio_utils.py  common_utils.py  config_manager.py  device_activator.py  device_fingerprint.py  opus_loader.py  resource_finder.py  volume_controller.py
tests/: simple_client.py
(+16 files in other folders)
